--- a/style.css
+++ b/style.css
@@ -5,42 +5,80 @@
 
 h1 {
     font-size: 45px;
+    color: red;
 }
 
 #main {
+    width: 50%;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px;
 }
 
 #griglia {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    width: 215px;
-    height: 215px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
 
-#scelta {
+#menu {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px;
+}
+
+#menu button {
+    width: 10vw;
+    height: 3vw;
+    margin: 1vw;
 }
 
 .casella {
     border: 1px solid black;
-    font-size: 45px;
+    font-size: 90px;
     text-align: center;
-    width: 50px;
-    height: 50px;
+    width: 5vw;
+    height: 5vw;
+    margin: 1px;
+    min-width: 100px;
+    min-height: 100px;
 }
 
-.casella:hover {
-    background-color: red;
-}
+/* Stile radio button */
+#scelta {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+  }
+  
+  #scelta input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+  }
+  
+  #scelta label {
+      display: inline-block;
+      background-color: #ddd;
+      padding: 10px 20px;
+      font-family: sans-serif, Arial;
+      font-size: 16px;
+      border: 2px solid #444;
+      border-radius: 50px;
+      margin: 30px 10px;
+  }
+  
+  #scelta label:hover {
+    background-color: #dfd;
+  }
+  
+  #scelta input[type="radio"]:focus + label {
+      border: 2px dashed #444;
+  }
+  
+  #scelta input[type="radio"]:checked + label {
+      background-color: #bfb;
+      border-color: #4c4;
+  }
+  
