--- a/style.css
+++ b/style.css
@@ -10,18 +10,33 @@ h1 {
     font-size: 45px;
 }
 
-#main {
+#container {
     width: 100%;
     max-width: 620px;
-    margin: auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#griglia {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+#grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.square {
+    border: 1px solid #000;
+    font-size: 6rem;
+    text-align: center;
+    width: 7rem;
+    height: 7rem;
+    min-width: 100px;
+    min-height: 100px;
+    flex: 1 1 20%;
 }
 
 #menu {
@@ -35,53 +50,42 @@ h1 {
     margin: 1vw;
 }
 
-.casella {
-    border: 1px solid black;
-    font-size: 6rem;
-    text-align: center;
-    width: 7rem;
-    height: 7rem;
-    margin: 1px;
-    min-width: 100px;
-    min-height: 100px;
-}
-
 /* Stile radio button */
-#scelta {
+#select {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-
   }
   
-  #scelta input[type="radio"] {
+  #select input[type="radio"] {
     opacity: 0;
     position: fixed;
     width: 0;
   }
   
-  #scelta label {
+  #select label {
       display: inline-block;
       background-color: #ddd;
-      padding: 10px 20px;
+      width: 3rem;
+      height: 3rem;
       font-family: sans-serif, Arial;
-      font-size: 16px;
-      border: 2px solid #444;
-      border-radius: 50px;
-      margin: 30px 10px;
+      font-size: 2rem;
+      text-align: center;
+      border: 2px solid #1792D2;
+      border-radius: 10%;
+      margin: 2rem 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
   }
   
-  #scelta label:hover {
-    background-color: #dfd;
+  #select label:hover {
+    background-color: #ccc;
   }
-  
-  #scelta input[type="radio"]:focus + label {
-      border: 2px dashed #444;
-  }
-  
-  #scelta input[type="radio"]:checked + label {
-      background-color: #bfb;
-      border-color: #4c4;
+
+  #select input[type="radio"]:checked + label {
+      background-color: #aaa;
+      border-color: #143774;
   }
   
