--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 }
 
 h1 {
-    font-size: 45px;
+    font-size: 3rem;
+    margin: 1rem;
 }
 
 #container {
@@ -19,35 +20,27 @@ h1 {
     align-items: center;
 }
 
+/* Stile griglia */
 #grid {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    align-content: center;
+    width: 30rem;
+    height: 30rem;
 
 }
 
 .square {
-    border: 1px solid #000;
-    font-size: 6rem;
+    border: 1px solid #777;
+    margin: 1px;
+    font-size: 5rem;
     text-align: center;
     width: 7rem;
     height: 7rem;
     min-width: 100px;
     min-height: 100px;
-    flex: 1 1 20%;
-}
-
-#menu {
-    display: flex;
-    flex-direction: row;
-}
-
-#menu button {
-    width: 10vw;
-    height: 3vw;
-    margin: 1vw;
 }
 
 /* Stile radio button */
@@ -67,10 +60,10 @@ h1 {
   #select label {
       display: inline-block;
       background-color: #ddd;
-      width: 3rem;
-      height: 3rem;
+      width: 4rem;
+      height: 4rem;
       font-family: sans-serif, Arial;
-      font-size: 2rem;
+      font-size: 3rem;
       text-align: center;
       border: 2px solid #1792D2;
       border-radius: 10%;
@@ -86,6 +79,24 @@ h1 {
 
   #select input[type="radio"]:checked + label {
       background-color: #aaa;
-      border-color: #143774;
   }
-  
+
+  /* Stile menù */
+#menu {
+    display: flex;
+    flex-direction: row;
+}
+
+#menu button {
+    font-size: 1rem;
+    width: 10rem;
+    height: 2rem;
+    margin: 1rem;
+    background-color: #fff;
+    border: none;
+    border-bottom: solid 2px #999;
+}
+ 
+#menu button:hover {
+    border-bottom: solid 2px #222;
+}
