--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-size: 20px;
 }
 body {
     font-size: 16px;
@@ -13,7 +14,6 @@ h1 {
 
 #container {
     width: 100%;
-    max-width: 620px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
