--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ h1 {
     align-items: center;
 }
 
+@media (max-width:675px) {
+    
+}
+
 /* Stile griglia */
 #grid {
     display: flex;
@@ -37,8 +41,8 @@ h1 {
     margin: 1px;
     font-size: 5rem;
     text-align: center;
-    width: 7rem;
-    height: 7rem;
+    width: 20vw;
+    height: 20vw;
     min-width: 100px;
     min-height: 100px;
 }
