--- a/style.css
+++ b/style.css
@@ -33,11 +33,33 @@ h1 {
 .square {
     float:left;
     position: relative;
-    width: 23%;
-    padding-bottom : 23%;
+    width: 22%;
+    padding-bottom : 22%;
+    margin:0.5%;
     border: 1px solid #1792D2;
     border-radius: 5%;
-    margin: 0.5%;
+    overflow:hidden;
+}
+
+.content {
+    position:absolute;
+    height:90%;
+    width:90%; 
+    padding: 5%;
+    
+}
+.table{
+    display:table;
+    width:100%;
+    height:100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align:middle;
+}
+
+.numbers{
+    font-weight: 800;
     font-size: 5rem;
     text-align: center;
 }
