--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 h1 {
-    font-size: 3rem;
-    margin: 1rem;
+    font-size: 2rem;
+    margin: 0.5rem;
 }
 
 #container {
@@ -81,15 +81,14 @@ h1 {
   #select label {
       display: inline-block;
       background-color: #ddd;
-      width: 4rem;
-      height: 4rem;
-      font-family: sans-serif, Arial;
-      font-size: 3rem;
+      width: 3rem;
+      height: 3rem;
+      font-size: 2rem;
       text-align: center;
       color:#1792D2;
       border: 2px solid #1792D2;
       border-radius: 10%;
-      margin: 2rem 1rem;
+      margin: 1rem;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -108,13 +107,13 @@ h1 {
 #menu {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 #menu button {
     font-size: 1rem;
-    width: 10rem;
-    height: 2rem;
-    margin: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
     background-color: #fff;
     border: none;
     border-bottom: solid 2px #999;
